--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
-    "canvas-gauges": "^2.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-gauge-chart": "^0.4.1",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "uuid": "^9.0.0",
