--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "dashboard",
   "version": "0.1.0",
+  "homepage": "https://october9818.github.io/TCN01A1/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
+    "gh-pages": "^5.0.0",
     "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-battery-gauge": "^1.0.4",
@@ -18,6 +20,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
